# mini-painel

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
doc/: agents.md  api.md  components-agents.md  dashboard-agents.md  dashboard.md  device-abstraction.md  getting-started.md
examples/: CMakeLists.txt  demo.c  live.c
src/: CMakeLists.txt  dashboard.c  dashboard.h  image.c  image.h  main.c  panel.c  panel.h  protocol.h  serial.c  serial.h  transition.c  transition.h  turing_image.c  turing_image.h  turing_panel.c  turing_protocol.c  types.h
src/components/: CMakeLists.txt  comp_alerts.c  comp_alerts.h  comp_base.c  comp_base.h  comp_build_status.c  comp_build_status.h  comp_checklist.c  comp_checklist.h  comp_deploy.c  comp_deploy.h  comp_divider.c  comp_divider.h  comp_error_rate.c  comp_error_rate.h  comp_gfx.c  comp_gfx.h  comp_header.c  comp_header.h  comp_metrics.c  comp_metrics.h  comp_oncall.c  comp_oncall.h  comp_outages.c  comp_outages.h  comp_pr_review.c  comp_pr_review.h  comp_schedule.c  comp_schedule.h  comp_sla_gauge.c  comp_sla_gauge.h  comp_spacer.c  comp_spacer.h  comp_sparkline.c  comp_sparkline.h  comp_sprint.c  comp_sprint.h  comp_team_status.c  comp_team_status.h  draw.c  (+1 more)
src/dashboard/: dashboard.c
src/device/: device_base.h  device_internal.h  panel.c  panel_common.c  panel_common.h  turing_device_internal.h  turing_panel.c
src/draw/: CMakeLists.txt  draw.c  draw.h  layout.h
src/image/: image.c  image.h
src/protocol/: port_detect.c  port_detect.h  protocol.c  protocol.h  turing_port_detect.c  turing_protocol.h
src/theme/: CMakeLists.txt  theme.c  theme.h  theme_default.c
tests/: CMakeLists.txt  fake_serial.c  fake_serial.h  test_components.c  test_dashboard.c  test_panel.c  test_transition.c
